java8.spoofax3/test/statics/java/classes/nested/unboundqualifiedthis.no.spt.bak
module classes/nested/unboundqualifiedthis_no

language metaborg-java

test unboundqualifiedthis [[

test;



// error: not an enclosing class\: A\.B\.Out

[p] {

    [A]
    package p;
    public class A {
        public class B {
            public class C {
                public class D {
                    public void m() {
                        B a = Out.this;
                    }
                }
            }

            public class Out {}
        }
    }

}

]] analysis fails
   run javacFails to ""
